--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Accueil
+			{% endblock %}Site e-commerce
+		</title>
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+		<meta
+		name="viewport" content="width=device-width, initial-scale=1.0">
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+		{# Feuilles de stylesheets #}
+		<link rel="stylesheet" href="{{asset('assets/css/bootstrap.min.css')}}"> {% block stylesheets %}{% endblock %}
+		<link
+		rel="stylesheet" href="{{asset('assets/css/style.css')}}">
+
+		{# fichier js  #}
+		<script src="{{asset('assets/js/bootstrap.bundle.min.js')}}" defer></script>
+		{# defer pour que ca se déclenche au bon moment #}
+		{% block javascripts %}{% endblock %}
+		<script src="{{asset('assets/js/script.js')}}" defer></script>
+	</head>
+	<body>
+		{% include "_partials/_nav.html.twig"%}
+		{% block body %}{% endblock %}
+		{% include "_partials/_footer.html.twig"%}
+	</body>
 </html>
